--- a/eagle-xl/auto_plotter/star_formation_rates.yml
+++ b/eagle-xl/auto_plotter/star_formation_rates.yml
@@ -376,3 +376,44 @@ star_formation_rate_function_30:
   observational_data:
     - filename: StarFormationRateFunction/Bell2007.hdf5
 
+adaptive_star_formation_rate_function_100:
+  type: "adaptivemassfunction"
+  legend_loc: "lower left"
+  number_of_bins: 30
+  x:
+    quantity: "apertures.sfr_gas_100_kpc"
+    units: "Solar_Mass / year"
+    start: 1e-3
+    end: 1e3
+  y:
+    units: 1/Mpc**3
+    start: 1e-5
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Star Formation Rate Function (100 kpc aperture)
+    caption: 100 kpc aperture galaxy star formation rate function, showing all galaxies with an adaptive bin-width.
+    section: Star Formation Rates
+  observational_data:
+    - filename: StarFormationRateFunction/Bell2007.hdf5
+
+adaptive_star_formation_rate_function_30:
+  type: "adaptivemassfunction"
+  legend_loc: "lower left"
+  number_of_bins: 30
+  x:
+    quantity: "apertures.sfr_gas_30_kpc"
+    units: "Solar_Mass / year"
+    start: 1e-3
+    end: 1e3
+  y:
+    units: 1/Mpc**3
+    start: 1e-5
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Star Formation Rate Function (30 kpc aperture)
+    caption: 30 kpc aperture galaxy star formation rate function, showing all galaxies with an adaptive bin-width
+    section: Star Formation Rates
+    show_on_webpage: false
+  observational_data:
+    - filename: StarFormationRateFunction/Bell2007.hdf5
+
