--- a/colibre/auto_plotter/metallicity.yml
+++ b/colibre/auto_plotter/metallicity.yml
@@ -1,6 +1,6 @@
 stellar_mass_gas_sf_metallicity_30:
   type: "scatter"
-  legend_loc: "lower right"
+  legend_loc: "upper left"
   selection_mask: "derived_quantities.is_active_30_kpc"
   comment: "Active only"
   y:
@@ -12,14 +12,14 @@ stellar_mass_gas_sf_metallicity_30:
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: solar_mass
-    start: 1e5
+    start: 1e6
     end: 1e12
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e5
+      value: 1e6
       units: solar_mass
     end:
       value: 1e12
@@ -36,7 +36,7 @@ stellar_mass_gas_sf_metallicity_30:
 
 stellar_mass_gas_sf_metallicity_100:
   type: "scatter"
-  legend_loc: "lower right"
+  legend_loc: "upper left"
   selection_mask: "derived_quantities.is_active_100_kpc"
   comment: "Active only"
   y:
@@ -48,14 +48,14 @@ stellar_mass_gas_sf_metallicity_100:
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: solar_mass
-    start: 1e5
+    start: 1e6
     end: 1e12
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e5
+      value: 1e6
       units: solar_mass
     end:
       value: 1e12
@@ -71,7 +71,7 @@ stellar_mass_gas_sf_metallicity_100:
 
 stellar_mass_star_metallicity_100:
   type: "scatter"
-  legend_loc: "lower right"
+  legend_loc: "upper left"
   y:
     quantity: "derived_quantities.star_metallicity_in_solar_100_kpc"
     units: "dimensionless"
@@ -80,14 +80,14 @@ stellar_mass_star_metallicity_100:
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: solar_mass
-    start: 1e5
+    start: 1e6
     end: 1e12
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e5
+      value: 1e6
       units: solar_mass
     end:
       value: 1e12
@@ -111,14 +111,14 @@ stellar_mass_star_metallicity_30:
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: solar_mass
-    start: 1e5
+    start: 1e6
     end: 1e12
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 30
     start:
-      value: 1e7
+      value: 1e6
       units: solar_mass
     end:
       value: 1e12
