--- a/eagle-xl/config.yml
+++ b/eagle-xl/config.yml
@@ -26,6 +26,11 @@ scripts:
     output_file: density_temperature.png
     section: Density-Temperature
     title: Density-Temperature
+  - filename: scripts/subgrid_density_temperature.py
+    caption: Density-temperature diagram constructed from the sub-grid quantities.
+    output_file: density_temperature.png
+    section: Density-Temperature
+    title: Density-Temperature
   - filename: scripts/density_temperature_metals.py
     caption: Density-temperature diagram with the pixel value weighted by the mean logrithmic metallicity in that bin. Medians are not used due to their computational complexity.
     output_file: density_temperature_metals.png
