--- a/eagle-xl/auto_plotter/baryon_fractions.yml
+++ b/eagle-xl/auto_plotter/baryon_fractions.yml
@@ -1,10 +1,10 @@
-baryon_fraction:
+baryon_fraction_200:
   type: "scatter"
   legend_loc: "upper left"
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 1e10
+    start: 1e12
     end: 1e15
   y:
     quantity: "derived_quantities.baryon_fraction_true"
@@ -15,9 +15,9 @@ baryon_fraction:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 15
     start:
-      value: 1e10
+      value: 1e12
       units: Solar_Mass
     end:
       value: 1e15
@@ -27,13 +27,13 @@ baryon_fraction:
     caption: Baryon (gas + stars) fractions within R_200. These are 'true' values, i.e. no observational correction was applied.
     section: Baryon Fractions
 
-gas_fraction:
+gas_fraction_200:
   type: "scatter"
   legend_loc: "upper left"
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 1e10
+    start: 1e12
     end: 1e15
   y:
     quantity: "derived_quantities.gas_fraction_true"
@@ -44,9 +44,9 @@ gas_fraction:
   median:
     plot: true
     log: true
-    number_of_bins: 25
+    number_of_bins: 15
     start:
-      value: 1e10
+      value: 1e12
       units: Solar_Mass
     end:
       value: 1e15
@@ -54,4 +54,62 @@ gas_fraction:
   metadata:
     title: "Halo gas fractions within R_200"
     caption: Gas fractions within R_200. These are 'true' values, i.e. no observational correction was applied.
+    section: Baryon Fractions
+
+baryon_fraction_500:
+  type: "scatter"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_500crit"
+    units: Solar_Mass
+    start: 1e12
+    end: 1e15
+  y:
+    quantity: "derived_quantities.baryon_fraction_true"
+    units:  "dimensionless"
+    log: false
+    start: 0.
+    end: 1.2
+  median:
+    plot: true
+    log: true
+    number_of_bins: 15
+    start:
+      value: 1e12
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: "Halo baryon fractions within R_500"
+    caption: Baryon (gas + stars) fractions within R_500. These are 'true' values, i.e. no observational correction was applied.
+    section: Baryon Fractions
+
+gas_fraction_500:
+  type: "scatter"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_500crit"
+    units: Solar_Mass
+    start: 1e12
+    end: 1e15
+  y:
+    quantity: "derived_quantities.gas_fraction_true"
+    units:  "dimensionless"
+    log: false
+    start: 0.
+    end: 1.2
+  median:
+    plot: true
+    log: true
+    number_of_bins: 15
+    start:
+      value: 1e12
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: "Halo gas fractions within R_500"
+    caption: Gas fractions within R_500. These are 'true' values, i.e. no observational correction was applied.
     section: Baryon Fractions
