--- a/eagle-xl/config.yml
+++ b/eagle-xl/config.yml
@@ -61,3 +61,9 @@ scripts:
     section: Feedback Energy Fraction
     title: $f_E$ as a Function of Birth Density
     output_file: birth_density_f_E.png
+  - filename: scripts/birth_density_distribution.py
+    caption: Distributions of birth densities, split by redshift.
+    title: Stellar Birth Densities
+    section: Feedback Energy Fraction
+    output_file: birth_density_distribution.png
+
