--- a/eagle-xl/auto_plotter/black_holes.yml
+++ b/eagle-xl/auto_plotter/black_holes.yml
@@ -14,6 +14,7 @@ stellar_mass_black_hole_mass_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e7
@@ -48,6 +49,7 @@ stellar_mass_black_hole_mass_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e7
@@ -57,7 +59,7 @@ stellar_mass_black_hole_mass_100:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Black Hole Mass relation (100 kpc Stellar Mass)
-    caption: SMBHM relation. Note that the stellar velocity dispersion is measured in observations in a fixed 1 kpc aperture
+    caption: SMBHM relation for the 100 kpc stellar mass aperture.
     section: Black Holes
   observational_data:
     - filename: GalaxyStellarMassBlackHoleMass/Sahu2019_ETG.hdf5
@@ -81,6 +83,7 @@ halo_mass_black_hole_mass:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -110,6 +113,7 @@ stellar_veldisp_black_hole_mass_10:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e0
@@ -141,6 +145,7 @@ stellar_veldisp_black_hole_mass_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e0
