--- a/eagle-xl/auto_plotter/star_formation_rates.yml
+++ b/eagle-xl/auto_plotter/star_formation_rates.yml
@@ -14,6 +14,7 @@ stellar_mass_sfr_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e7
@@ -45,6 +46,7 @@ stellar_mass_sfr_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e7
@@ -78,6 +80,7 @@ stellar_mass_specific_sfr_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e7
@@ -115,6 +118,7 @@ stellar_mass_specific_sfr_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e7
@@ -153,6 +157,7 @@ halo_mass_specific_sfr_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -188,6 +193,7 @@ halo_mass_specific_sfr_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -222,6 +228,7 @@ halo_mass_sfr_30_halo_mass:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -254,6 +261,7 @@ halo_mass_sfr_100_halo_mass:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -284,6 +292,7 @@ stellar_mass_passive_fraction_30:
   mean:
     plot: true
     log: true
+    adaptive: true
     scatter: "none"
     number_of_bins: 25
     start:
@@ -319,6 +328,7 @@ stellar_mass_passive_fraction_100:
   mean:
     plot: true
     log: true
+    adaptive: true
     scatter: "none"
     number_of_bins: 25
     start:
