--- a/eagle-xl/auto_plotter/stellar_mass_halo_mass.yml
+++ b/eagle-xl/auto_plotter/stellar_mass_halo_mass.yml
@@ -14,6 +14,7 @@ stellar_mass_halo_mass_all_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -47,6 +48,7 @@ stellar_mass_halo_mass_centrals_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -115,6 +117,7 @@ stellar_mass_halo_mass_centrals_ratio_stellar_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e7
@@ -147,6 +150,7 @@ stellar_mass_halo_mass_all_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -181,6 +185,7 @@ stellar_mass_halo_mass_centrals_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -216,6 +221,7 @@ stellar_mass_halo_mass_centrals_ratio_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e9
@@ -251,6 +257,7 @@ stellar_mass_halo_mass_centrals_ratio_stellar_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e7
