--- a/eagle-xl/config.yml
+++ b/eagle-xl/config.yml
@@ -89,11 +89,11 @@ scripts:
   - filename: scripts/bh_accretion_evolution.py
     caption: Evolution of the accretion rate onto BHs per unit co-moving volume.
     output_file: bh_accretion_evolution.png
-    section: Black Holes
+    section: Black Holes Evolution
     title: Black Hole Accretion History
   - filename: scripts/bh_mass_evolution.py
     caption: Evolution of the BH mass per unit co-moving volume.
     output_file: bh_mass_evolution.png
-    section: Black Holes
+    section: Black Holes Evolution
     title: Black Hole Mass History
 
