--- a/eagle-xl/auto_plotter/baryon_fractions.yml
+++ b/eagle-xl/auto_plotter/baryon_fractions.yml
@@ -24,8 +24,8 @@ baryon_fraction_500:
       value: 1e15
       units: Solar_Mass
   metadata:
-    title: "Halo baryon fractions within R_500"
-    caption: Baryon (gas + stars) fractions within R_500 normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied.
+    title: "Halo baryon fractions within $R_{500}$"
+    caption: Baryon (gas + stars) fractions within $R_{500}$ normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied.
     section: Baryon Fractions
 
 gas_fraction_500:
@@ -54,8 +54,8 @@ gas_fraction_500:
       value: 1e15
       units: Solar_Mass
   metadata:
-    title: "Halo gas fractions within R_500"
-    caption: Gas fractions within R_500 normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied.
+    title: "Halo gas fractions within $R_{500}$"
+    caption: Gas fractions within $R_{500}$ normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied.
     section: Baryon Fractions
   observational_data:
     - filename: HaloMassGasFractions/Lin2012.hdf5
@@ -87,6 +87,6 @@ gas_mass_500:
       value: 1e15
       units: Solar_Mass
   metadata:
-    title: "Halo gas masses within R_500"
-    caption: Gas masses within R_500 normalised. These are 'true' values, i.e. no cut or observational correction was applied.
+    title: "Halo gas masses within $R_{500}$"
+    caption: Gas masses within $R_{500}$. These are 'true' values, i.e. no cut or observational correction was applied.
     section: Baryon Fractions
