--- a/eagle-xl/auto_plotter/cold_gas_relations.yml
+++ b/eagle-xl/auto_plotter/cold_gas_relations.yml
@@ -1,6 +1,6 @@
 stellar_mass_neutral_fraction_30:
   type: "scatter"
-  legend_loc: "lower right"
+  legend_loc: "upper right"
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
@@ -30,7 +30,7 @@ stellar_mass_neutral_fraction_30:
 
 stellar_mass_neutral_fraction_100:
   type: "scatter"
-  legend_loc: "lower right"
+  legend_loc: "upper right"
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
@@ -59,7 +59,7 @@ stellar_mass_neutral_fraction_100:
 
 stellar_mass_molecular_fraction_30:
   type: "scatter"
-  legend_loc: "lower right"
+  legend_loc: "upper right"
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
@@ -89,7 +89,7 @@ stellar_mass_molecular_fraction_30:
 
 stellar_mass_molecular_fraction_100:
   type: "scatter"
-  legend_loc: "lower right"
+  legend_loc: "upper right"
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
@@ -113,6 +113,65 @@ stellar_mass_molecular_fraction_100:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Molecular Gas Fraction (100 kpc Stellar Mass)
+    caption: All galaxies are included in the median line.
+    section: Gas Relations
+
+stellar_mass_H2_mass_30:
+  type: "scatter"
+  legend_loc: "lower right"
+  x:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  y:
+    quantity: "derived_quantities.gas_H2_mass_Msun"
+    units: "Solar_Mass"
+    start: 1e7
+    end: 1e11
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e7
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-H$_2$ Gas Mass (30 kpc Stellar Mass)
+    caption: All galaxies are included in the median line.
+    section: Gas Relations
+    show_on_webpage: false
+
+stellar_mass_H2_mass_100:
+  type: "scatter"
+  legend_loc: "lower right"
+  x:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  y:
+    quantity: "derived_quantities.gas_H2_mass_Msun"
+    units: "Solar_Mass"
+    start: 1e7
+    end: 1e11
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e7
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-H$_2$ Gas Mass (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line.
     section: Gas Relations
 
