--- a/eagle-xl/config.yml
+++ b/eagle-xl/config.yml
@@ -106,6 +106,11 @@ scripts:
     output_file: gas_masses.png
     section: Histograms
     title: Gas Particle Masses
+  - filename: scripts/max_temperatures.py
+    caption: Maximal temperature recorded by gas particles throughout the entire simulation.
+    output_file: gas_max_temperatures.png
+    section: Histograms
+    title: Maximal Temperature reached by gas particles
   - filename: scripts/wallclock_simulation_time.py
     caption: The cosmic time as a function of the wall-clock time.
     title: Cosmic time vs. wall-clock time
