--- a/eagle-xl/auto_plotter/stellar_mass_halo_mass.yml
+++ b/eagle-xl/auto_plotter/stellar_mass_halo_mass.yml
@@ -29,7 +29,7 @@ stellar_mass_halo_mass_M200_all_100:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
 
-stellar_mass_halo_mass_Mvir_all_100:
+stellar_mass_halo_mass_MBN98_all_100:
   type: "scatter"
   legend_loc: "lower right"
   x:
@@ -54,7 +54,7 @@ stellar_mass_halo_mass_Mvir_all_100:
       value: 1e14
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, M$_{\rm vir}$)
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, M$_{\rm BN98}$)
     caption: Includes all haloes, including subhaloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -94,7 +94,7 @@ stellar_mass_halo_mass_M200_centrals_100:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_z0p0.hdf5
 
-stellar_mass_halo_mass_Mvir_centrals_100:
+stellar_mass_halo_mass_MBN98_centrals_100:
   type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
@@ -121,7 +121,7 @@ stellar_mass_halo_mass_Mvir_centrals_100:
       value: 1e14
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, centrals only, M$_{\rm vir}$)
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, centrals only, M$_{\rm BN98}$)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -226,7 +226,7 @@ stellar_mass_halo_mass_M200_all_30:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
 
-stellar_mass_halo_mass_Mvir_all_30:
+stellar_mass_halo_mass_MBN98_all_30:
   type: "scatter"
   legend_loc: "lower right"
   x:
@@ -251,7 +251,7 @@ stellar_mass_halo_mass_Mvir_all_30:
       value: 1e14
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (30 kpc aperture, M$_{\rm vir}$)
+    title: Stellar Mass-Halo Mass relation (30 kpc aperture, M$_{\rm BN98}$)
     caption: Includes all haloes, including subhaloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
@@ -293,7 +293,7 @@ stellar_mass_halo_mass_M200_centrals_30:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_z0p0.hdf5
 
-stellar_mass_halo_mass_Mvir_centrals_30:
+stellar_mass_halo_mass_MBN98_centrals_30:
   type: "scatter"
   comment: "Centrals only"
   legend_loc: "lower right"
@@ -320,7 +320,7 @@ stellar_mass_halo_mass_Mvir_centrals_30:
       value: 1e14
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (30 kpc aperture, centrals only, M$_{\rm vir}$)
+    title: Stellar Mass-Halo Mass relation (30 kpc aperture, centrals only, M$_{\rm BN98}$)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
