--- a/colibre/auto_plotter/galaxy_sizes.yml
+++ b/colibre/auto_plotter/galaxy_sizes.yml
@@ -14,6 +14,7 @@ stellar_mass_galaxy_size_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -45,6 +46,7 @@ stellar_mass_galaxy_size_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -77,6 +79,7 @@ stellar_mass_projected_galaxy_size_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -109,6 +112,7 @@ stellar_mass_projected_galaxy_size_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -145,6 +149,7 @@ stellar_mass_projected_galaxy_size_active_only_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -180,6 +185,7 @@ stellar_mass_projected_galaxy_size_active_only_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -216,6 +222,7 @@ stellar_mass_projected_galaxy_size_passive_only_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -251,6 +258,7 @@ stellar_mass_projected_galaxy_size_passive_only_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
