--- a/colibre/auto_plotter/star_formation_rates.yml
+++ b/colibre/auto_plotter/star_formation_rates.yml
@@ -14,6 +14,7 @@ stellar_mass_sfr_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -45,6 +46,7 @@ stellar_mass_sfr_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -78,6 +80,7 @@ stellar_mass_specific_sfr_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -115,6 +118,7 @@ stellar_mass_specific_sfr_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -153,6 +157,7 @@ halo_mass_specific_sfr_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e8
@@ -188,6 +193,7 @@ halo_mass_specific_sfr_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e8
@@ -222,6 +228,7 @@ halo_mass_sfr_30_halo_mass:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e8
@@ -254,6 +261,7 @@ halo_mass_sfr_100_halo_mass:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e8
@@ -285,6 +293,7 @@ stellar_mass_passive_fraction_30:
     plot: true
     log: true
     scatter: "none"
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -320,6 +329,7 @@ stellar_mass_passive_fraction_100:
     plot: true
     log: true
     scatter: "none"
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
