--- a/colibre/auto_plotter/black_holes.yml
+++ b/colibre/auto_plotter/black_holes.yml
@@ -14,6 +14,7 @@ stellar_mass_black_hole_mass_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -48,6 +49,7 @@ stellar_mass_black_hole_mass_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e6
@@ -81,6 +83,7 @@ halo_mass_black_hole_mass:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 25
     start:
       value: 1e8
@@ -110,6 +113,7 @@ stellar_veldisp_black_hole_mass_10:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 10
     start:
       value: 1e1
@@ -141,6 +145,7 @@ stellar_veldisp_black_hole_mass_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 10
     start:
       value: 10
